--- a/flights/package.json
+++ b/flights/package.json
@@ -10,6 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
   }
 }
