--- a/flights/package.json
+++ b/flights/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "dev": "ts-node-dev index.ts",
+    "lint": "eslint --ext .ts .",
+    "start": "npm run tsc && node build/index.js"
   },
   "keywords": [],
   "author": "",
