--- a/flights/package.json
+++ b/flights/package.json
@@ -7,7 +7,8 @@
     "tsc": "tsc",
     "dev": "ts-node-dev index.ts",
     "lint": "eslint --ext .ts .",
-    "start": "npm run tsc && node build/index.js"
+    "start": "npm run tsc && node build/index.js",
+    "clean": "rm -rf build"
   },
   "keywords": [],
   "author": "",
