--- a/flights/package.json
+++ b/flights/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "tsc": "tsc",
-    "dev": "ts-node-dev index.ts",
+    "dev": "ts-node-dev src/index.ts",
     "lint": "eslint --ext .ts .",
     "start": "npm run tsc && node build/index.js",
     "clean": "rm -rf build"
