--- a/flights/package.json
+++ b/flights/package.json
@@ -8,7 +8,8 @@
     "dev": "ts-node-dev src/index.ts",
     "lint": "eslint --ext .ts .",
     "start": "npm run tsc && node build/index.js",
-    "clean": "rm -rf build"
+    "clean": "rm -rf build",
+    "cleanbuild": "npm run clean && npm run tsc"
   },
   "keywords": [],
   "author": "",
